force-app/main/default/objects/MarketingEvent__c/MarketingEvent__c.object-meta.xml
<CustomObject>
    <label>Marketing Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>