force-app/main/default/objects/MarketingEvent__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <length>128</length>
    <type>Text</type>
</CustomField>