force-app/main/default/objects/MarketingEvent__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <label>Campaign ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>